# mapart-tools

./: .gitignore  LICENSE  README.md  blocks.txt  build.gradle  proguard.pro  settings.gradle  ui_state.json
data/1.21.11/: block_map.json  color_map.json
src/main/cpp/: dither_algorithms.h  dither_color.h  dither_kernels.h  dither_matrices.h  dither_types.h  image_ditherer.cpp
src/main/java/org/duollectis/mapart/tools/: MapartTools.java
src/main/java/org/duollectis/mapart/tools/app/: AppMessages.java  AppPreferences.java  DiscordRpc.java  MTBootstrap.java  RootCommand.java  SingleInstanceGuard.java
src/main/java/org/duollectis/mapart/tools/cli/: ConvertCommand.java  ListCommand.java
src/main/java/org/duollectis/mapart/tools/commands/: ConvertCommand.java  ListCommand.java
src/main/java/org/duollectis/mapart/tools/convert/: CIEDE2000.java  ColorSpace.java  DitherEngine.java  EdgeDetector.java
src/main/java/org/duollectis/mapart/tools/converter/: AlgorithmType.java  BlockData.java  BlockLeveler.java  Brightness.java  ColorMetric.java  ConversionStage.java  CropMode.java  CropSettings.java  DitherAlgorithm.java  DitherSettings.java  Ditherer.java  ImageConverter.java  LeveledEntry.java  (+7 more)
src/main/resources/lang/: en_us.json  ru_ru.json
src/main/resources/themes/: dark.json  light.json
src/main/resources/versions/: 1.21.11.json
src/test/cpp/: CMakeLists.txt  dither_algorithms_test.cpp  dither_color_test.cpp  dither_kernels_test.cpp  dither_matrices_test.cpp
src/test/java/org/duollectis/mapart/tools/: CIEDE2000Test.java  ColorSpaceTest.java
(+151 files in other folders)
